Making merge commit into a regular commit